--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -82,17 +82,17 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/autologin"
-        android:id="@+id/checkBox"
+        android:id="@+id/checkBoxAutoLogin"
         android:layout_marginTop="29dp"
         android:layout_below="@+id/relativeLayout2"
-        android:layout_alignRight="@+id/outStorage"
-        android:layout_alignEnd="@+id/outStorage" />
+        android:layout_alignRight="@+id/logIn"
+        android:layout_alignEnd="@+id/logIn" />
 
     <com.beardedhen.androidbootstrap.BootstrapButton
         android:layout_width="match_parent"
         android:layout_height="90px"
         android:text="@string/login"
-        android:id="@+id/outStorage"
+        android:id="@+id/logIn"
         android:layout_margin="40px"
         android:gravity="center"
         app:bootstrapBrand="primary"
@@ -101,16 +101,16 @@
         app:showOutline="false"
         app:roundedCorners="true"
         android:layout_marginTop="47dp"
-        android:layout_below="@+id/checkBox"
+        android:layout_below="@+id/checkBoxAutoLogin"
         android:layout_centerHorizontal="true" />
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/imageView6"
-        android:layout_below="@+id/outStorage"
-        android:layout_alignRight="@+id/checkBox"
-        android:layout_alignEnd="@+id/checkBox"
+        android:layout_below="@+id/logIn"
+        android:layout_alignRight="@+id/checkBoxAutoLogin"
+        android:layout_alignEnd="@+id/checkBoxAutoLogin"
         android:src="@mipmap/langtao" />
 
     <RelativeLayout
