--- a/app/src/main/res/layout/activity_service.xml
+++ b/app/src/main/res/layout/activity_service.xml
@@ -70,11 +70,13 @@
                 android:layout_marginRight="10px"
                 android:id="@+id/textView10" />
 
-            <TextView
+
+
+            <EditText
                 android:layout_width="match_parent"
                 android:layout_height="100px"
                 android:gravity="center_vertical"
-                android:id="@+id/textView12" />
+                android:id="@+id/textViewIp" />
         </LinearLayout>
     </LinearLayout>
 
