add net  db,miaohl

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -290,6 +290,6 @@
     <color name="title">#0073C6</color>
 
     <color name="background">#EFEFEA</color>
-
+    <color name="black">#000000</color>
 
 </resources>
