--- a/app/src/main/res/layout/activity_dir_out_list.xml
+++ b/app/src/main/res/layout/activity_dir_out_list.xml
@@ -18,7 +18,7 @@
             android:id="@+id/img_dir_out_list_back"/>
 
         <TextView
-            android:id="@+id/textView1"
+            android:id="@+id/textViewTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
