--- a/app/src/main/res/layout/activity_dir_out_confirm.xml
+++ b/app/src/main/res/layout/activity_dir_out_confirm.xml
@@ -200,6 +200,7 @@
                 android:layout_width="160px"
                 android:layout_height="100px"
                 android:layout_alignParentRight="true"
+                android:src="@mipmap/outaffirm"
                 android:background="@color/orangered"/>
             <TextView
                 android:layout_width="wrap_content"
