--- a/app/src/main/res/layout/activity_dir_out_order.xml
+++ b/app/src/main/res/layout/activity_dir_out_order.xml
@@ -178,6 +178,7 @@
                 android:text="全选"/>
             <ImageView
                 android:id="@+id/img_dir_out_order_choose"
+                android:src="@mipmap/choose"
                 android:layout_width="160px"
                 android:layout_height="100px"
                 android:layout_alignParentRight="true"
