--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -27,13 +27,12 @@
     </RelativeLayout>
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="600px"
+        android:layout_height="300px"
         android:id="@+id/imageView"
-        android:layout_below="@+id/relativeLayout1"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="68dp"
-        android:src="@mipmap/zhongnanjitun" />
+        android:src="@mipmap/zhongnanjitun"
+        android:layout_above="@+id/relativeLayout2"
+        android:layout_centerHorizontal="true" />
 
 
     <RelativeLayout
