--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,7 @@
             android:layout_centerVertical="true"
             android:text="@string/newgoods"
             android:textColor="@color/white"
-            android:textSize="@dimen/textsize" />
+            android:textSize="@dimen/headsize" />
 
     </RelativeLayout>
 
