--- a/app/src/main/res/layout/activity_dir_out_list.xml
+++ b/app/src/main/res/layout/activity_dir_out_list.xml
@@ -25,7 +25,7 @@
             android:layout_centerVertical="true"
             android:text="直入直出办理"
             android:textColor="@color/white"
-            android:textSize="@dimen/textsize"/>
+            android:textSize="@dimen/headsize"/>
 
     </RelativeLayout>
 
@@ -53,6 +53,10 @@
 
     <ListView
         android:id="@+id/lv_dir_out_order"
+        android:divider="#00000000"
+        android:dividerHeight="5dp"
         android:layout_width="match_parent"
+        android:layout_marginLeft="10px"
+        android:layout_marginRight="10px"
         android:layout_height="match_parent"/>
 </LinearLayout>
