--- a/app/src/main/res/layout/activity_print_list.xml
+++ b/app/src/main/res/layout/activity_print_list.xml
@@ -1,69 +1,20 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
-            <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
-              <!--android:layout_width="match_parent"-->
-              <!--android:layout_height="match_parent"-->
-              <!--android:orientation="vertical">-->
+<?xml version="1.0" encoding="utf-8"?><!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"--><!--xmlns:app="http://schemas.android.com/apk/res-auto"--><!--android:layout_width="match_parent"--><!--android:layout_height="match_parent"--><!--android:orientation="vertical">-->
 
-    <!--<RelativeLayout-->
-        <!--android:id="@+id/relativeLayout1"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="100px"-->
-        <!--android:layout_alignParentLeft="true"-->
-        <!--android:background="@color/title">-->
+<!--<RelativeLayout--><!--android:id="@+id/relativeLayout1"--><!--android:layout_width="match_parent"--><!--android:layout_height="100px"--><!--android:layout_alignParentLeft="true"--><!--android:background="@color/title">-->
 
-        <!--<ImageView-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:src="@mipmap/arrow_left"-->
-            <!--android:id="@+id/img_dir_out_list_back"/>-->
+<!--<ImageView--><!--android:layout_width="wrap_content"--><!--android:layout_height="wrap_content"--><!--android:src="@mipmap/arrow_left"--><!--android:id="@+id/img_dir_out_list_back"/>-->
 
-        <!--<TextView-->
-            <!--android:id="@+id/textViewTitle"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_centerHorizontal="true"-->
-            <!--android:layout_centerVertical="true"-->
-            <!--android:text="打印"-->
-            <!--android:textColor="@color/white"-->
-            <!--android:textSize="@dimen/textsize"/>-->
+<!--<TextView--><!--android:id="@+id/textViewTitle"--><!--android:layout_width="wrap_content"--><!--android:layout_height="wrap_content"--><!--android:layout_centerHorizontal="true"--><!--android:layout_centerVertical="true"--><!--android:text="打印"--><!--android:textColor="@color/white"--><!--android:textSize="@dimen/textsize"/>-->
 
-    <!--</RelativeLayout>-->
+<!--</RelativeLayout>-->
 
 
-    <!--<ListView-->
-        <!--android:id="@+id/lv_dir_out_order"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="403dp"/>-->
+<!--<ListView--><!--android:id="@+id/lv_dir_out_order"--><!--android:layout_width="match_parent"--><!--android:layout_height="403dp"/>-->
 
-    <!--<RelativeLayout-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="100px"-->
-        <!--android:gravity="center_vertical|bottom"-->
-        <!--android:layout_alignParentBottom="true"-->
-        <!--android:layout_alignParentLeft="true"-->
-        <!--android:layout_alignParentStart="true"-->
-        <!--android:background="@drawable/top_wries"-->
-        <!--android:id="@+id/relativeLayout">-->
-    <!--<com.beardedhen.androidbootstrap.BootstrapButton-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="90px"-->
-        <!--android:text="打印"-->
-        <!--android:id="@+id/logIn"-->
-        <!--android:layout_margin="40px"-->
-        <!--android:gravity="center"-->
-        <!--app:bootstrapBrand="primary"-->
-        <!--android:textSize="@dimen/textsize"-->
-        <!--app:buttonMode="regular"-->
-        <!--app:showOutline="false"-->
-        <!--app:roundedCorners="true"-->
-        <!--android:layout_marginTop="47dp"-->
-        <!--android:layout_below="@+id/checkBoxAutoLogin"-->
-        <!--android:layout_centerHorizontal="true" />-->
-<!--</LinearLayout>-->
+<!--<RelativeLayout--><!--android:layout_width="match_parent"--><!--android:layout_height="100px"--><!--android:gravity="center_vertical|bottom"--><!--android:layout_alignParentBottom="true"--><!--android:layout_alignParentLeft="true"--><!--android:layout_alignParentStart="true"--><!--android:background="@drawable/top_wries"--><!--android:id="@+id/relativeLayout">--><!--<com.beardedhen.androidbootstrap.BootstrapButton--><!--android:layout_width="match_parent"--><!--android:layout_height="90px"--><!--android:text="打印"--><!--android:id="@+id/logIn"--><!--android:layout_margin="40px"--><!--android:gravity="center"--><!--app:bootstrapBrand="primary"--><!--android:textSize="@dimen/textsize"--><!--app:buttonMode="regular"--><!--app:showOutline="false"--><!--app:roundedCorners="true"--><!--android:layout_marginTop="47dp"--><!--android:layout_below="@+id/checkBoxAutoLogin"--><!--android:layout_centerHorizontal="true" />--><!--</LinearLayout>-->
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background">
@@ -74,7 +25,7 @@
         android:layout_width="match_parent"
         android:layout_height="100px"
         android:layout_alignParentLeft="true"
-        android:background="@color/title" >
+        android:background="@color/title">
 
         <TextView
             android:id="@+id/textView12"
@@ -84,48 +35,53 @@
             android:layout_centerVertical="true"
             android:text="打印"
             android:textColor="@color/white"
-            android:textSize="@dimen/textsize" />
+            android:textSize="@dimen/headsize" />
 
         <ImageView
+            android:id="@+id/imageView3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/imageView3"
-            android:src="@mipmap/arrow_left"
-            android:layout_alignParentTop="true"
+            android:layout_alignParentBottom="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:layout_alignParentBottom="true" />
+            android:layout_alignParentTop="true"
+            android:src="@mipmap/arrow_left" />
     </RelativeLayout>
 
     <ListView
-    android:id="@+id/lv_dir_out_order"
-    android:layout_width="match_parent"
-    android:layout_height="403dp"
+        android:id="@+id/lv_dir_out_order"
+        android:layout_width="match_parent"
+        android:layout_height="403dp"
+        android:layout_above="@+id/relativeLayout"
         android:layout_below="@+id/relativeLayout5"
-        android:layout_above="@+id/relativeLayout" />
+        android:layout_marginLeft="10px"
+        android:layout_marginRight="10px"
+        android:divider="#00000000"
+        android:dividerHeight="5dp" />
+
     <RelativeLayout
+        android:id="@+id/relativeLayout"
         android:layout_width="match_parent"
         android:layout_height="100px"
-        android:gravity="center_vertical|bottom"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:background="@drawable/top_wries"
-        android:id="@+id/relativeLayout">
+        android:gravity="center_vertical|bottom">
 
         <com.beardedhen.androidbootstrap.BootstrapButton
-        android:layout_width="match_parent"
-        android:layout_height="100px"
-        android:text="打印"
-        android:id="@+id/logIn"
-            android:gravity="center"
-        app:bootstrapBrand="primary"
-        android:textSize="@dimen/textsize"
-        app:buttonMode="regular"
-        app:showOutline="false"
-        app:roundedCorners="true"
+            android:id="@+id/logIn"
+            android:layout_width="match_parent"
+            android:layout_height="100px"
             android:layout_below="@+id/checkBoxAutoLogin"
-        android:layout_centerHorizontal="true"
-            android:layout_margin="10px" />
+            android:layout_centerHorizontal="true"
+            android:layout_margin="10px"
+            android:gravity="center"
+            android:text="打印"
+            android:textSize="@dimen/textsize"
+            app:bootstrapBrand="primary"
+            app:buttonMode="regular"
+            app:roundedCorners="true"
+            app:showOutline="false" />
     </RelativeLayout>
 </RelativeLayout>
