--- a/app/src/main/res/layout/item_dir_out_order_material.xml
+++ b/app/src/main/res/layout/item_dir_out_order_material.xml
@@ -57,7 +57,8 @@
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
                     android:layout_marginRight="@dimen/activity_horizontal_margin"
-                    android:text="+"
+                    android:text=" + "
+                    android:textSize="40dp"
                     android:textColor="@color/orangered" />
 
                 <EditText
@@ -78,7 +79,8 @@
                     android:layout_centerVertical="true"
                     android:layout_marginRight="8dp"
                     android:layout_toLeftOf="@+id/et_dir_out_order_m_num"
-                    android:text="-"
+                    android:text=" - "
+                    android:textSize="40dp"
                     android:textColor="@color/orangered" />
             </RelativeLayout>
         </LinearLayout>
