--- a/app/src/main/res/layout/activity_dir_out_order.xml
+++ b/app/src/main/res/layout/activity_dir_out_order.xml
@@ -12,7 +12,7 @@
         android:background="@color/title">
 
         <ImageView
-            android:id="@+id/img_dir_out_list_back"
+            android:id="@+id/back_image"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@mipmap/arrow_left"/>
@@ -178,7 +178,7 @@
                 android:text="全选"/>
             <TextView
                 android:id="@+id/img_dir_out_order_choose"
-                android:src="@mipmap/choose"
+
                 android:layout_width="160px"
                 android:layout_height="100px"
                 android:layout_alignParentRight="true"
