--- a/app/src/main/res/layout/activity_dir_out_confirm.xml
+++ b/app/src/main/res/layout/activity_dir_out_confirm.xml
@@ -129,6 +129,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="@string/contact"
+                android:visibility="gone"
                 android:textSize="16sp"/>
 
             <TextView
@@ -137,6 +138,7 @@
                 android:layout_weight="3"
                 android:id="@+id/tv_dir_out_contact"
                 android:textColor="@color/black"
+                android:visibility="gone"
                 android:textSize="16sp"/>
         </LinearLayout>
 
