--- a/app/src/main/res/layout/activity_print_list.xml
+++ b/app/src/main/res/layout/activity_print_list.xml
@@ -79,6 +79,7 @@
             android:gravity="center"
             android:text="打印"
             android:textSize="@dimen/textsize"
+            android:visibility="gone"
             app:bootstrapBrand="primary"
             app:buttonMode="regular"
             app:roundedCorners="true"
