--- a/app/src/main/res/layout/item_dir_out_order_material.xml
+++ b/app/src/main/res/layout/item_dir_out_order_material.xml
@@ -1,9 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:padding="@dimen/activity_horizontal_margin">
+    android:background="@color/white"
+    android:layout_marginBottom="20px"
+    android:paddingTop="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingBottom="@dimen/activity_horizontal_margin"
+    android:paddingLeft="5dp">
 
     <LinearLayout
         android:layout_width="30dp"
@@ -19,153 +24,88 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="4dp"
         android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:weightSum="1">
 
             <TextView
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:layout_weight="1"
                 android:textColor="@color/gray"
                 android:text="材料名称" />
 
-            <RelativeLayout
-                android:layout_width="0dp"
+            <TextView
+                android:id="@+id/tv_dir_out_order_m_name"
+                android:layout_width="350px"
                 android:layout_height="wrap_content"
-                android:layout_weight="3">
+                android:layout_centerVertical="true"
+                android:text="热镀桥架连接片"
+                android:textColor="@color/black" />
 
-                <TextView
-                    android:id="@+id/tv_dir_out_order_m_name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:text="热镀桥架连接片"
-                    android:textColor="@color/black" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:textColor="@color/gray"
+                android:text="单位"
+                android:id="@+id/textView28" />
 
-                <TextView
-                    android:id="@+id/tv_dir_out_order_m_add"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
-                    android:layout_centerVertical="true"
-                    android:layout_marginRight="@dimen/activity_horizontal_margin"
-                    android:text=" + "
-                    android:textSize="40dp"
-                    android:textColor="@color/orangered" />
-
-                <EditText
-                    android:id="@+id/et_dir_out_order_m_num"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:digits="0,1,2,3,4,5,6,7,8,9,."
-                    android:focusable="false"
-                    android:layout_marginRight="8dp"
-                    android:layout_toLeftOf="@+id/tv_dir_out_order_m_add"
-                    android:textColor="@color/orangered" />
-
-                <TextView
-                    android:id="@+id/tv_dir_out_order_m_del"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:layout_marginRight="8dp"
-                    android:layout_toLeftOf="@+id/et_dir_out_order_m_num"
-                    android:text=" - "
-                    android:textSize="40dp"
-                    android:textColor="@color/orangered" />
-            </RelativeLayout>
+            <TextView
+                android:id="@+id/tv_dir_out_order_m_unit"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:text="综合"
+                android:textColor="@color/black"
+                android:gravity="center" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/tv_dir_out_order_1"
-                android:layout_width="0dp"
+                android:id="@+id/textView26"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:layout_weight="1"
                 android:text="规格型号"
                 android:textColor="@color/gray" />
 
             <TextView
                 android:id="@+id/tv_dir_out_order_m_model"
-                android:layout_width="0dp"
+                android:layout_width="350px"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
-                android:layout_weight="1"
                 android:text="综合"
-                android:textColor="@color/black" />
+                android:textColor="@color/black"
+                android:gravity="center_vertical" />
 
             <TextView
-                android:id="@+id/tv_dir_out_order_left"
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:layout_weight="1"
                 android:textColor="@color/gray"
-                android:text="订单剩余数" />
-
-            <TextView
-                android:id="@+id/tv_dir_out_order_m_qty"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_weight="1"
-                android:text="0"
-                android:textColor="@color/black" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_weight="1"
-                android:textColor="@color/gray"
-                android:text="单位" />
-
-            <TextView
-                android:id="@+id/tv_dir_out_order_m_unit"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_weight="1"
-                android:text="综合"
-                android:textColor="@color/black" />
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_weight="1"
-                android:textColor="@color/gray"
-                android:text="品牌" />
+                android:text="品牌"
+                android:id="@+id/textView30" />
 
             <TextView
                 android:id="@+id/tv_dir_out_order_m_brand"
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
-                android:layout_weight="1"
                 android:text="综合"
-                android:textColor="@color/black" />
+                android:textColor="@color/black"
+                android:gravity="center" />
         </LinearLayout>
 
         <LinearLayout
@@ -179,7 +119,8 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:textColor="@color/gray"
-                android:text="备注" />
+                android:text="备        注"
+                android:gravity="center_vertical" />
 
             <TextView
                 android:id="@+id/tv_dir_out_order_m_note"
@@ -192,6 +133,70 @@
                 android:singleLine="false"
                 android:text="综合备注内容测试,综合备注内容测试,综合备注内容测试,综合备注内容测试,综合备注内容测试"
                 android:textColor="@color/black" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/tv_dir_out_order_left"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_weight="1.3"
+                android:textColor="@color/gray"
+                android:text="剩余数" />
+
+            <TextView
+                android:id="@+id/tv_dir_out_order_m_qty"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_weight="1"
+                android:text="0"
+                android:textColor="@color/black"
+                android:gravity="center"
+                android:layout_gravity="center" />
+
+            <RelativeLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="3" >
+
+                <EditText
+                    android:id="@+id/et_dir_out_order_m_num"
+                    android:layout_width="200px"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:digits="0,1,2,3,4,5,6,7,8,9,."
+                    android:focusable="false"
+                    android:textSize="15dp"
+                    android:layout_toLeftOf="@+id/tv_dir_out_order_m_add"
+                    android:textColor="@color/orangered"
+                    android:gravity="center" />
+
+                <TextView
+                    android:id="@+id/tv_dir_out_order_m_add"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:text=" + "
+                    android:textSize="40dp"
+                    android:textColor="@color/orangered" />
+
+                <TextView
+                    android:id="@+id/tv_dir_out_order_m_del"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_toLeftOf="@+id/et_dir_out_order_m_num"
+                    android:text=" - "
+                    android:textSize="40dp"
+                    android:textColor="@color/orangered" />
+            </RelativeLayout>
         </LinearLayout>
     </LinearLayout>
 
