--- a/app/src/main/res/layout/printdata_layout.xml
+++ b/app/src/main/res/layout/printdata_layout.xml
@@ -56,6 +56,8 @@
         android:layout_above="@+id/relativeLayout"
         android:layout_marginLeft="10px"
         android:layout_marginRight="10px"
+        android:scrollbars="vertical"
+
         android:layout_below="@+id/device_name" />
 
     <RelativeLayout
